# tree-sitter-rock

./: Cargo.toml  README.md  binding.gyp  example-file  example-file.rk  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.cc
